# hip-jit

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
examples/: CMakeLists.txt  example.hip  example_ptx.hip
include/: cmd.hpp  device.hpp  helper.hpp
include/jitter/: jitter.hpp  types.hpp
include/jitter/detail/: ptx_jitter.hpp  read_ptx.hpp  readers.hpp
inputs/llvm_bitcode/: printf_kernel-hip-amdgcn-amd-amdhsa-gfx1100.bc  printf_kernel-hip-amdgcn-amd-amdhsa-gfx1100.cui  printf_kernel-hip-amdgcn-amd-amdhsa-gfx1100.s  printf_kernel.hip
